# Android_Tents

./: .gitignore  CMakeLists.txt  README.md  fonction.h  game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_private.c  game_private.h  game_sdl.c  game_solve.c  game_text.c  game_tools.c  game_tools.h  game_tools_test.c  launch.json  minimal.c  model.c  model.h  queue.c  queue.h
android/: AndroidManifest.xml
android/jni/src/: Android.mk  game_struct.h  minimal.c
